--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
-	"name": "themeforest-starter-template",
-	"description": "Frontend Starter Kit with Gulp for either Themeforest Projects or customizable projects.",
+	"name": "footcharts",
+	"description": "Football Charts and Graphics",
 	"main": "gulpfile.js",
-	"authors": ["Telat Kaya"],
-	"license": "MIT",
+	"authors": ["Yellowred"],
+	"license": "ISC",
 	"keywords": [
-		"gulp",
-		"pug",
-		"sass",
-		"scss",
-		"babel",
-		"es6",
+		"football",
+		"charts",
+		"graphics",
+		"interactive",
+		"echarts",
+		"chartli",
 		"ecmascript6",
 		"es6-javascript",
 		"preprocessor",
@@ -24,17 +24,68 @@
 		"theme-development",
 		"theme",
 		"themeforest",
-		"starter-kit"
+		"codecanyon"
 	],
-	"homepage": "https://github.com/partitect/ThemeForest-Starter-Template",
+	"homepage": "https://github.com/partitect/footcharts",
 	"private": true,
 	"ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
 	"dependencies": {
-		"jquery": "^3.4.1"
+		"jquery": "^3.4.1",
+		"bootstrap": "^4.3.1",
+		"lightgallery": "lightGallery#^1.6.12",
+		"echarts": "latest",
+		"metisMenu": "^3.0.4",
+		"animsition": "^4.0.2",
+		"jquery.nicescroll": "nicescroll#^3.7.6",
+		"perfect-scrollbar": "latest",
+		"filterizr": "^2.2.3",
+		"list.js": "listjs#^1.5.0",
+		"bodymovin": "^5.5.9",
+		"noisejs": "*",
+		"docsify": "^4.9.4",
+		"moment": "momentjs#^2.24.0",
+		"echarts-liquidfill": "https://github.com/ecomfe/echarts-liquidfill.git#^2.0.5",
+		"fomantic-ui": "^2.8.6"
 	},
 	"overrides": {
 		"jquery": {
 			"main": ["./dist/jquery.min.js"]
+		},
+		"fomantic-ui": {
+			"main": [
+				"./dist/components/*.min.*",
+				"./dist/themes/default/assets/fonts/*",
+				"./dist/themes/default/assets/images/*",
+				"./dist/semantic.min.js",
+				"./dist/semantic.min.css"
+			]
+		},
+		"echarts": {
+			"main": ["./dist/echarts-en.min.js", "./map/js/world.js", "./map/js/usa.js"]
+		},
+		"metisMenu": {
+			"main": ["./dist/metisMenu.min.css", "./dist/metisMenu.min.js"]
+		},
+		"animsition": {
+			"main": ["./dist/css/animsition.min.css", "./dist/js/animsition.min.js"]
+		},
+		"perfect-scrollbar": {
+			"main": ["./css/perfect-scrollbar.min.css", "./js/perfect-scrollbar.min.js"]
+		},
+		"list.js": {
+			"main": ["./dist/list.min.js"]
+		},
+		"bodymovin": {
+			"main": ["./build/player/lottie.min.js"]
+		},
+		"noisejs": {
+			"main": ["./index.js"]
+		},
+		"moment": {
+			"main": ["./min/moment.min.js"]
+		},
+		"echarts-liquidfill": {
+			"main": ["./dist/echarts-liquidfill.min.js"]
 		}
 	}
 }
