--- a/.editorconfig
+++ b/.editorconfig
@@ -34,7 +34,7 @@ indent_style = tab
 
 # Indentation override for all JS under lib directory
 [lib/**.js]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 # Matches the exact files either package.json or .travis.yml
