--- a/bower.json
+++ b/bower.json
@@ -1,91 +1,163 @@
 {
-	"name": "footcharts",
-	"description": "Football Charts and Graphics",
-	"main": "gulpfile.js",
-	"authors": ["Yellowred"],
-	"license": "ISC",
-	"keywords": [
-		"football",
-		"charts",
-		"graphics",
-		"interactive",
-		"echarts",
-		"chartli",
-		"ecmascript6",
-		"es6-javascript",
-		"preprocessor",
-		"frontend",
-		"front-end",
-		"front-end-development",
-		"front-end-webdevelopment",
-		"optimize",
-		"minify",
-		"theme",
-		"theme-development",
-		"theme",
-		"themeforest",
-		"codecanyon"
-	],
-	"homepage": "https://github.com/partitect/footcharts",
-	"private": true,
-	"ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
-	"dependencies": {
-		"jquery": "^3.4.1",
-		"bootstrap": "^4.3.1",
-		"lightgallery": "lightGallery#^1.6.12",
-		"echarts": "latest",
-		"metisMenu": "^3.0.4",
-		"animsition": "^4.0.2",
-		"jquery.nicescroll": "nicescroll#^3.7.6",
-		"perfect-scrollbar": "latest",
-		"filterizr": "^2.2.3",
-		"list.js": "listjs#^1.5.0",
-		"bodymovin": "^5.5.9",
-		"noisejs": "*",
-		"docsify": "^4.9.4",
-		"moment": "momentjs#^2.24.0",
-		"echarts-liquidfill": "https://github.com/ecomfe/echarts-liquidfill.git#^2.0.5",
-		"fomantic-ui": "^2.8.6"
-	},
-	"overrides": {
-		"jquery": {
-			"main": ["./dist/jquery.min.js"]
+  "name": "footcharts",
+  "description": "Football Charts and Graphics",
+  "main": "gulpfile.js",
+  "authors": [
+    "Yellowred"
+  ],
+  "license": "ISC",
+  "keywords": [
+    "football",
+    "charts",
+    "graphics",
+    "interactive",
+    "echarts",
+    "chartli",
+    "ecmascript6",
+    "es6-javascript",
+    "preprocessor",
+    "frontend",
+    "front-end",
+    "front-end-development",
+    "front-end-webdevelopment",
+    "optimize",
+    "minify",
+    "theme",
+    "theme-development",
+    "theme",
+    "themeforest",
+    "codecanyon"
+  ],
+  "homepage": "https://github.com/partitect/footcharts",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "bootstrap": "^4.3.1",
+    "lightgallery": "lightGallery#^1.6.12",
+    "echarts": "latest",
+    "metisMenu": "^3.0.4",
+    "animsition": "^4.0.2",
+    "jquery.nicescroll": "nicescroll#^3.7.6",
+    "perfect-scrollbar": "latest",
+    "filterizr": "^2.2.3",
+    "list.js": "listjs#^1.5.0",
+    "bodymovin": "^5.5.9",
+    "noisejs": "*",
+    "docsify": "^4.9.4",
+    "moment": "momentjs#^2.24.0",
+    "echarts-liquidfill": "https://github.com/ecomfe/echarts-liquidfill.git#^2.0.5",
+    "fomantic-ui": "^2.8.6",
+    "font-awesome": "5.10.1",
+    "swiper": "^4.4.6",
+    "magnific-popup": "^1.1.0",
+    "popper.js": "^2.4.4",
+    "jquery.easing": "^1.3.1"
+  },
+  "overrides": {
+    "jquery": {
+      "main": [
+        "./dist/jquery.min.js"
+      ]
+    },
+    "bootstrap": {
+      "main": [
+        "./dist/css/bootstrap.min.css",
+        "./dist/js/bootstrap.min.js"
+      ]
+    },
+    "fomantic-ui": {
+      "main": [
+        "./dist/components/*.min.*",
+        "./dist/themes/default/assets/fonts/*",
+        "./dist/themes/default/assets/images/*",
+        "./dist/semantic.min.js",
+        "./dist/semantic.min.css"
+      ]
+    },
+    "echarts": {
+      "main": [
+        "./dist/echarts-en.min.js",
+        "./map/js/world.js",
+        "./map/js/usa.js"
+      ]
+    },
+    "metisMenu": {
+      "main": [
+        "./dist/metisMenu.min.css",
+        "./dist/metisMenu.min.js"
+      ]
+    },
+    "animsition": {
+      "main": [
+        "./dist/css/animsition.min.css",
+        "./dist/js/animsition.min.js"
+      ]
+    },
+    "perfect-scrollbar": {
+      "main": [
+        "./css/perfect-scrollbar.min.css",
+        "./js/perfect-scrollbar.min.js"
+      ]
+    },
+    "list.js": {
+      "main": [
+        "./dist/list.min.js"
+      ]
+    },
+    "bodymovin": {
+      "main": [
+        "./build/player/lottie.min.js"
+      ]
+    },
+    "noisejs": {
+      "main": [
+        "./index.js"
+      ]
+    },
+    "moment": {
+      "main": [
+        "./min/moment.min.js"
+      ]
+    },
+    "echarts-liquidfill": {
+      "main": [
+        "./dist/echarts-liquidfill.min.js"
+      ]
 		},
-		"fomantic-ui": {
-			"main": [
-				"./dist/components/*.min.*",
-				"./dist/themes/default/assets/fonts/*",
-				"./dist/themes/default/assets/images/*",
-				"./dist/semantic.min.js",
-				"./dist/semantic.min.css"
-			]
+		"font-awesome": {
+      "main": [
+				"./css/fontawesome.min.css",
+				"./webfonts/**/*"
+      ]
 		},
-		"echarts": {
-			"main": ["./dist/echarts-en.min.js", "./map/js/world.js", "./map/js/usa.js"]
+		"swiper": {
+      "main": [
+				"./dist/css/swiper.min.css",
+				"./dist/js/swiper.min.js"
+      ]
 		},
-		"metisMenu": {
-			"main": ["./dist/metisMenu.min.css", "./dist/metisMenu.min.js"]
+		"magnific-popup": {
+      "main": [
+				"./dist/magnific-popup.css",
+				"./dist/jquery.magnific-popup.min.js"
+      ]
 		},
-		"animsition": {
-			"main": ["./dist/css/animsition.min.css", "./dist/js/animsition.min.js"]
+		"jquery.easing": {
+      "main": [
+				"./js/jquery.easing.min.js"
+      ]
 		},
-		"perfect-scrollbar": {
-			"main": ["./css/perfect-scrollbar.min.css", "./js/perfect-scrollbar.min.js"]
-		},
-		"list.js": {
-			"main": ["./dist/list.min.js"]
-		},
-		"bodymovin": {
-			"main": ["./build/player/lottie.min.js"]
-		},
-		"noisejs": {
-			"main": ["./index.js"]
-		},
-		"moment": {
-			"main": ["./min/moment.min.js"]
-		},
-		"echarts-liquidfill": {
-			"main": ["./dist/echarts-liquidfill.min.js"]
-		}
-	}
+		"popper.js": {
+      "main": [
+				"./src/popper.js"
+      ]
+    }
+  }
 }
